<resources>
    <string name="app_name">Lab06</string>
    <string name="playboi">playboi</string>
    <string name="hello">hello</string>
    <string name="vote_on_your_favorite">Vote on your favorite</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="back">Back</string>
    <string name="_0">0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="would_you_like_to_exit">Would you like to exit?</string>
    <string name="no">No</string>
    <string name="thanks">Thank you for voting</string>
</resources>
