<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vote_on_your_favorite"
        android:textSize="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image1"
            android:contentDescription="@string/playboi"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/playboicarti" />
        <ImageView
            android:id="@+id/image2"
            android:contentDescription="@string/hello"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/steve"/>
        <ImageView
            android:id="@+id/image3"
            android:contentDescription="@string/hello"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/creeper"/>
        <ImageView
            android:id="@+id/image4"
            android:contentDescription="@string/hello"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/Baby_LlamaZ" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>